--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,12 +10,11 @@
     /*========== Colors ==========*/
     /* --hue-color: 250; */
 
-    --first-color: #5680E9;
-    --title-color: #8860D0;
-    --title-color-secondary: #3b292969;
-    --text-color: #C1C8E4;
-    --body-color: #5AB9EA;
-    --body-color-light: #84CEEB;
+    --primary-color: #ECEEF2;
+    --secondary-color: #F07268;
+    --title-color: #006D8F;
+    --text-color: #8F4DB8;
+    --text-color-light: #cfa7e7;
 
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
@@ -63,7 +62,7 @@
 body {
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-    background-color: var(--body-color);
+    background-color: var(--primary-color);
     color: var(--text-color);
 }
 
@@ -99,6 +98,11 @@ img {
     height: auto;
 }
 
+progress,
+input {
+    accent-color: var(--title-color);
+}
+
 /*========== Hide Scrollbar ==========*/
 .main {
     /* Internet Explorer 10+ and Edge */
@@ -122,7 +126,7 @@ img {
     scroll-snap-align: start;
 
     padding: 3rem 5rem;
-    border: 5px solid black;
+    /* border: 5px solid black; */
 }
 
 .section__title {
@@ -139,10 +143,6 @@ img {
     text-align: center;
 }
 
-/* .section__text {
-    font-size: var(--normal-font-size);
-} */
-
 .popup__container {
     border: 2px solid black;
     text-align: center;
@@ -154,7 +154,7 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 0 2rem 1rem 2rem;
-    background-color: whitesmoke;
+    background-color: var(--primary-color);
 }
 
 .popup__image {
@@ -177,41 +177,6 @@ img {
     margin: 0.75rem 0;
 }
 
-/* .logo-svg {
-    
-} */
-
-/* .section__quote {
-    font-family: 'Gelasio', serif;
-    max-width: 50%;
-    height: 100%;
-    border: 2px solid black;
-}
-
-.section__quote::before {
-    content: "\201c";
-    font-size: 5rem;
-    display: block;
-    margin-bottom: -3rem;
-    margin-top: -28px;
-}
-
-.section__quote--text {
-    color: var(--first-color);
-    font-size: 2rem;
-
-}
-
-.section__quote--credit {
-    font-size: var(--small-font-size);
-    font-weight: bold;
-    text-align: right;
-}
-
-.section__quote--credit::before {
-    content: "\2014\0020";
-} */
-
 .btn {
     padding: 0.5rem;
     background-color: var(--body-color);
@@ -225,7 +190,7 @@ img {
 
 .btn:hover {
     color: white;
-    background-color: var(--first-color);
+    background-color: var(--primary-color);
     transition: 0.2s ease-in;
 }
 
@@ -262,21 +227,6 @@ img {
     overflow-y: scroll;
 }
 
-/* .footer {
-    width: 100%;
-    height: var(--footer-height);
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: var(--z-fixed);
-
-    display: flex;
-    align-items: center;
-
-    padding: 0 var(--page-indent);
-    background-color: var(--body-color);
-} */
-
 /*==================== NAV ====================*/
 .navbar__list {
     display: flex;
@@ -296,26 +246,10 @@ img {
     width: 5rem;
 }
 
-
-/* .a,
-.b {
-    height: 100%;
-}
-.a {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 80px));
-    background: #FE8F8F;
-}
-.b {
-    clip-path: polygon(0 0, 100% 80px, 100% 100%, 0 100%);
-    margin-top: -60px;
-    background: rgb(100, 100, 211);
-} */
-
 /*==================== SECTION ====================*/
-
 /*=============== Hero Section ===============*/
 .hero {
-    background-color: aquamarine;
+    background-color: var(--primary-color);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -350,7 +284,7 @@ img {
 
 /*=============== About Section ===============*/
 .about {
-    background-color: rgb(255, 136, 162);
+    background-color: var(--primary-color);
 }
 
 .about__content-wrapper {
@@ -368,6 +302,10 @@ img {
 }
 
 /*=============== Skills Section ===============*/
+.skills {
+    background-color: var(--primary-color);
+}
+
 .skills__content-wrapper {
     margin: 3rem auto;
     /* max-width: calc(100vh - var(--page-indent)); */
@@ -388,19 +326,13 @@ img {
 }
 
 .skills__name {
-    color: var(--title-color);
-    font-weight: var(--font-semi-bold);
-}
-
-.skills__name-progress {
-    color: var(--title-color-secondary);
     font-weight: var(--font-semi-bold);
 }
 
 
 /*=============== Projects Section ===============*/
 .projects {
-    background-color: antiquewhite;
+    background-color: var(--primary-color);
 }
 
 .projects__cards-container {
@@ -449,7 +381,7 @@ img {
 
 /*=============== Contact Section ===============*/
 .contact {
-    background-color: yellowgreen;
+    background-color: var(--primary-color);
 }
 
 .contact__content-wrapper {
@@ -474,6 +406,7 @@ img {
 
 .contact__link--text {
     font-size: var(--small-font-size);
+    color: var(--text-color);
 }
 
 .contacts__email {
@@ -481,9 +414,13 @@ img {
 }
 
 .contact__form--field {
-    background-color: cornflowerblue;
+    background-color: var(--text-color);
     border-radius: .5rem;
     padding: .75rem 1rem .25rem;
+}
+
+.contact__form--field-text {
+    color: white;
 }
 
 .contact__form--field-wrapper {
