--- a/templates/index.html
+++ b/templates/index.html
@@ -80,28 +80,28 @@
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">HTML</p>
-                            <p class="skills__name-progress">90%</p>
+                            <p class="skills__name">90%</p>
                         </div>
                         <progress id="skills__progress" value="90" max="100">90%</progress>
                     </div>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">CSS</p>
-                            <p class="skills__name-progress">60%</p>
+                            <p class="skills__name">60%</p>
                         </div>
                         <progress id="skills__progress" value="60" max="100">60%</progress>
                     </div>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">JavaScript</p>
-                            <p class="skills__name-progress">50%</p>
+                            <p class="skills__name">50%</p>
                         </div>
                         <progress id="skills__progress" value="50" max="100">50%</progress>
                     </div>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">Django</p>
-                            <p class="skills__name-progress">70%</p>
+                            <p class="skills__name">70%</p>
                         </div>
                         <progress id="skills__progress" value="70" max="100">70%</progress>
                     </div>
@@ -111,21 +111,21 @@
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">Python</p>
-                            <p class="skills__name-progress">90%</p>
+                            <p class="skills__name">90%</p>
                         </div>
                         <progress id="skills__progress" value="90" max="100">90%</progress>
                     </div>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">C++</p>
-                            <p class="skills__name-progress">30%</p>
+                            <p class="skills__name">30%</p>
                         </div>
                         <progress id="skills__progress" value="30" max="100">30%</progress>
                     </div>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">Bash</p>
-                            <p class="skills__name-progress">40%</p>
+                            <p class="skills__name">40%</p>
                         </div>
                         <progress id="skills__progress" value="40" max="100">40%</progress>
                     </div>
@@ -135,14 +135,14 @@
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">paint.NET</p>
-                            <p class="skills__name-progress">70%</p>
+                            <p class="skills__name">70%</p>
                         </div>
                         <progress id="skills__progress" value="70" max="100">70%</progress>
                     </div>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">Figma</p>
-                            <p class="skills__name-progress">30%</p>
+                            <p class="skills__name">30%</p>
                         </div>
                         <progress id="skills__progress" value="30" max="100">30%</progress>
                     </div>
@@ -152,14 +152,14 @@
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">Git / GitHub</p>
-                            <p class="skills__name-progress">70%</p>
+                            <p class="skills__name">70%</p>
                         </div>
                         <progress id="skills__progress" value="90" max="100">90%</progress>
                     </div>
                     <div class="skills__web">
                         <div class="skills__name-wrapper">
                             <p class="skills__name">VSCode</p>
-                            <p class="skills__name-progress">60%</p>
+                            <p class="skills__name">60%</p>
                         </div>
                         <progress id="skills__progress" value="60" max="100">60%</progress>
                     </div>
@@ -211,7 +211,6 @@
         </section>
         <section class="section contact" id="contact">
             <h1 class="section__title">Contact</h1>
-            <h1 class="section__subtitle">this is subtitle</h1>
             {% if messages %}
                 {% for message in messages %}
                     <div class="popup__container">
@@ -267,20 +266,20 @@
                     {% csrf_token %}
                     <div class="contact__form--field-wrapper">
                         <div class="contact__form--field contact__form--field-name">
-                            <label for="name">Name</label>
+                            <label for="name" class="contact__form--field-text">Name</label>
                             <input type="text" name="name" id="name" class="contact__form-input">
                         </div>
                         <div class="contact__form--field contact__form--field-email">
-                            <label for="email">Email</label>
+                            <label for="email" class="contact__form--field-text">Email</label>
                             <input type="email" name="email" id="email" class="contact__form-input" required>
                         </div>
                     </div>
                     <div class="contact__form--field">
-                        <label for="subject">Subject</label>
+                        <label for="subject" class="contact__form--field-text">Subject</label>
                         <input type="text" name="subject" id="subject" class="contact__form-input">
                     </div>
                     <div class="contact__form--field">
-                        <label for="mesage">Message</label>
+                        <label for="mesage" class="contact__form--field-text">Message</label>
                         <textarea name="message" id="message" cols="30" rows="10" class="contact__form-input" required></textarea>
                     </div>                    
                     <button class="btn">Submit</button>
